# ascii_art

./: .gitattributes  CMakeLists.txt  README.md
Resources/: ascii_font.json
source/ascii_core/: ascii_converter.cpp  ascii_converter.hpp
source/core/: ascii_converter.cpp  ascii_converter.hpp
source/gui/linux/: gui.cpp  gui.hpp  main.cpp
source/gui/macos/: ASCIIConverterBridging.h  AlertManager.swift  AnimationType.Swift  AnimationViewModel.swift  App.swift  AppMode.swift  AppSettings.swift  BackgroundAnimationView.swift  ContentView.swift  Extensions.swift  ImageToASCIIView.swift  ImageToASCIIViewModel.swift  MainMenuView.swift  MainScreenView.swift  MenuScreenView.swift  SettingsView.swift  SharedComponents.swift  TextToASCIIView.swift  TextToASCIIViewModel.swift
source/main/: linux_main.cpp  macos_main.swift
